--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 .env.test.local
 .env.production.local
 
+.eslintrc.js
+.prettierrc
+.stylelintrc
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
