--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "http://charleswcho.github.io/personal-website",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -11,10 +13,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "lint:js": "eslint --ext=js --ext=jsx .",
     "lint:css": "stylelint --config=.stylelintrc '**/*.css'",
     "test": "react-scripts test --env=jsdom",
+    "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
