--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "lint:js": "eslint --ext=js --ext=jsx .",
+    "lint:js": "eslint --ext=js --ext=jsx src/",
     "lint:css": "stylelint --config=.stylelintrc '**/*.css'",
     "test": "react-scripts test --env=jsdom",
     "build": "react-scripts build",
