--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "http://charleswesleycho.com",
+  "homepage": "http://www.charleswesleycho.com",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.0",
