--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "homepage": "https://charleswesleycho.com",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "gh-pages": "^2.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "1.1.5"
   },
@@ -22,17 +22,17 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^4.19.1 || ^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.11.0",
-    "husky": "^1.0.0",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
     "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3",
-    "stylelint": "^9.5.0",
+    "prettier": "^1.16.4",
+    "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0"
   },
   "husky": {
